--- a/paper/paper.bib
+++ b/paper/paper.bib
@@ -1,23 +1,25 @@
 @misc{Nakamoto08,
-  title = {A peer-to-peer electronic cash system},
+  title = {A Peer-to-Peer Electronic Cash System},
   author = {Nakamoto, Satoshi},
   year = {2008},
   url = {https://bitcoin.org/bitcoin.pdf}
 }
 
-@incollection{ETH,
+@incollection{ETH15,
   title = {Chapter 20: Eventual Consistency \& Bitcoin},
-  author = {ETH Zurich Principles of Distributed Computing},
+  booktitle = {Principles of Distributed Computing (Lecture Collection)},
+  author = {Wattenhofer, Roger},
+  year = {2015},
   url = {https://disco.ethz.ch/courses/podc_allstars/lecture/chapter20.pdf}
 }
 
 @inproceedings{Decker15,
-  title={A fast and scalable payment network with bitcoin duplex micropayment channels},
-  author={Decker, Christian and Wattenhofer, Roger},
-  booktitle={Symposium on Self-Stabilizing Systems},
-  pages={3--18},
-  year={2015},
-  organization={Springer}
+  title = {A fast and scalable payment network with bitcoin duplex micropayment channels},
+  author = {Decker, Christian and Wattenhofer, Roger},
+  booktitle = {Symposium on Self-Stabilizing Systems},
+  pages = {3--18},
+  year = {2015},
+  organization = {Springer}
 }
 
 @misc{Buterin14,
