Relate to bigger picture.

--- a/paper/paper.tex
+++ b/paper/paper.tex
@@ -344,7 +344,10 @@ increase the rate of transactions  by establishing micropayment channels between
 two parties outside the blockchain network~\citep{Decker15}. Moreover, the
 introduction of a decentralized system for financial transactions by Bitcoin led
 to a number of other blockchain-based cryptocurrencies such as
-Ethereum~\citep{Buterin14}.
+Ethereum~\citep{Buterin14}. Bitcoin is just one instance of how distributed
+computing can be applied to the field of finance and economics. It would be
+interesting to see how else distributed computing can be applied to these
+fields.
 
 \bibliographystyle{plainnat}
 \bibliography{paper.bib}
